--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -3,6 +3,7 @@
 body {
   background: #FFF;
   padding: 70px 0;
+  text-shadow:1px 1px 1px rgba(0,0,0,0.004) !important;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
 
@@ -17,6 +18,7 @@ img.story {
   text-align: center;
   border-radius: 25px;
   opacity: 1;
+  padding: 1em;
 }
 
 .container {
