--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -13,10 +13,10 @@ img.story {
 }
 
 .game {
-  background-color: #DDD;
+  background-color: #EEE;
   width: 300px;
   text-align: center;
-  border-radius: 25px;
+  border-radius: 7px;
   opacity: 1;
   padding: 1em;
 }
