--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,7 +1,7 @@
 @import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500';
 
 body {
-  background: #FFF;
+  background: linear-gradient(141deg, #d0fefe 0%, #d0e7fe 51%, #e5f2fe 75%);
   padding: 70px 0;
   text-shadow:1px 1px 1px rgba(0,0,0,0.004) !important;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
@@ -116,21 +116,20 @@ p.item-text {
 }
 
 .next, .prev {
-  color: #444;
+  color: #022445;
   position: absolute;
   top: 100px;
   padding: 1em 2em;
   cursor: pointer;
-  background: #CCC;
+  background: #85c1fc;
   border-radius: 5px;
-  border-top: 1px solid #FFF;
-  box-shadow: 0 5px 0 #999;
+  box-shadow: 0 5px 0 #022e59;
   transition: box-shadow 0.1s, top 0.1s;
 }
 .next:hover, .prev:hover { color: #000; }
 .next:active, .prev:active {
   top: 104px;
-  box-shadow: 0 1px 0 #999;
+  box-shadow: 0 1px 0 #022e59;
 }
 .next { right: 5em; }
 .prev { left: 5em; }
